--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -946,7 +946,7 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Reconstrucción 3D: cámara estéreo}
+	\frametitle{Triangulación estéreo (con cámara rectificada)}
 	
 	\TODO{fusionar esta slide con la anterior}
 	
