--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -948,24 +948,32 @@
 \begin{frame}
 	\frametitle{Triangulación estéreo (con cámara rectificada)}
 	
-	\TODO{fusionar esta slide con la anterior}
-	
-	\begin{figure}[!h]
-		\includegraphics[width=0.6\textwidth]{images/stereo_triangulation2.png}
+	\TODO{corregir variables}
+    
+   	\begin{figure}[!htb]
+        \centering
+        \subfloat[]
+        {
+            \includegraphics[width=0.35\columnwidth]{./images/stereo_triangulation2.pdf}
+        }
+        \hspace{1em}
+        \subfloat[]
+        {
+            \includegraphics[width=0.45\columnwidth]{./images/stereo_triangulation3.pdf}
+        }
 	\end{figure}
 	
 	\begin{equation*}
-		\frac{T}{Z} = \frac{T - (x_l - x_r)}{Z-f} \Rightarrow Z = \frac{fT}{(x_l - x_r)}  = \frac{fT}{d}
+		\frac{b}{z} = \frac{b - (\imagePoint_{l} - \imagePoint_{r})}{z-f} \Rightarrow z = \frac{fb}{(\imagePoint_{l} - \imagePoint_{r})}  = \frac{fb}{d}
 	\end{equation*}
 	
 \end{frame}
 
 \begin{frame}
 	\frametitle{Disparidad}
-	\TODO{vectorizar imagenes}
 	\footnotesize
 	\begin{figure}[!h]
-		\includegraphics[width=0.7\textwidth]{images/disparity.png}
+		\includegraphics[width=0.6\textwidth]{images/disparity.pdf}
 	\end{figure}
 
     Ejemplo de disparidad: pongamos un dedo enfrente de nuestros ojos a una distancia \SI{20}{\centi\meter} y alternadamente cerremos y abramos cada ojo.
