--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -1,4 +1,26 @@
 \begin{frame}
+    \frametitle{Material utilizado para estas slides}
+   
+    \footnotesize
+    \begin{itemize}
+        \item Slides fuertemente basadas de \url{https://youtu.be/ebMyBbkkHWk}
+        \item \url{https://3d.bk.tudelft.nl/courses/geo1016/slides/Lecture_03_Calibration.pdf}
+    \end{itemize}
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Motivación}
+    
+    Las cámaras pueden ser utilizadas para realizar una reconstrucción del entorno y estimar la localización de un robot. Visual Odometry / Visual SLAM.
+    
+    \TODO{Agregar imagen o video de Visual SLAM o de Visual Odometry}
+    
+    
+\end{frame}
+
+
+\begin{frame}
 	\frametitle{Detección de Keypoints}
 	
 	\note{Slides fuertemente basadas de https://youtu.be/ebMyBbkkHWk}
