--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -319,25 +319,23 @@
     
     \footnotesize
     \begin{figure}[!h]
-        \TODO{renombrar punto 3D}
-        \centering
         \subfloat[]
         {
-            \includegraphics[width=0.3\columnwidth]{images/camera/pinhole_camera_model.pdf}
+            \includegraphics[width=0.28\columnwidth]{images/camera/pinhole_camera_model.pdf}
         }
         \subfloat[]
         {
-            \includegraphics[width=0.3\columnwidth]{images/camera/pinhole_camera_model2.pdf}
+            \includegraphics[width=0.28\columnwidth]{images/camera/pinhole_camera_model2.pdf}
         }
     \end{figure}
     
     \begin{block}{Modelo Pin-hole básico}
-        Cámara es una correspondencia entre el mundo 3D (espacio del objeto) y la imagen 2D.. En el modelo de cámara pinhole, el punto de la imagen $\imagePoint=\begin{bmatrix}u & v\end{bmatrix}^{\top}$ se determina como la intersección entre el {\bf plano de la imagen} y el rayo que une el punto del mundo $\point =\begin{bmatrix}x & y & z\end{bmatrix}^{\top}$ y el {\bf centro de proyección óptico} $\cameraCenter$. 
+        Una Cámara permite obtener correspondencias entre el mundo 3D (espacio del objeto) y la imagen 2D. En el modelo de cámara pinhole, el punto de la imagen $\imagePoint=\begin{bmatrix}u & v\end{bmatrix}^{\top}$ se determina como la intersección entre el {\bf plano de la imagen} y el rayo que une el punto del mundo $\point =\begin{bmatrix}x & y & z\end{bmatrix}^{\top}$ y el {\bf centro de proyección óptico} $\cameraCenter$. 
     \end{block}
     
     \begin{itemize}
-        \item $f$ es la distancia focal
-        \item $\principalPoint = \begin{bmatrix}0 & 0 & f\end{bmatrix}^{\top}$ es el punto principal
+        \item $f$ es la \textbf{distancia focal}
+        \item $\principalPoint = \begin{bmatrix}0 & 0 & f\end{bmatrix}^{\top}$ es el \textbf{punto principal}
         \item el eje $Z$ es el {\bf eje principal}
         \item $\worldPoint$ es el punto en el sistema de coordenadas del mundo
     \end{itemize}
@@ -480,13 +478,13 @@
 \begin{frame}
     \frametitle{Cámara - Modelo Pin-Hole}   
     \footnotesize
-    \begin{equation}
+    \begin{align*}
         \begin{bmatrix}
             fx+z\principalPoint_{u}\\
             fy+z\principalPoint_{v}\\
             z
         \end{bmatrix}
-        =
+        &=
         \begin{bmatrix}
             f & 0 & \principalPoint_{u} & 0\\
             0 & f & \principalPoint_{v} & 0\\
@@ -497,11 +495,32 @@
             y\\
             z\\
             1
+        \end{bmatrix}\\
+        \begin{bmatrix}
+            fx+z\principalPoint_{u}\\
+            fy+z\principalPoint_{v}\\
+            z
         \end{bmatrix}
-    \end{equation}
+        &=
+        \begin{bmatrix}f & 0 & \principalPoint_{u}\\
+            0 & f & \principalPoint_{v}\\
+            0 & 0 & 1
+        \end{bmatrix}
+        \begin{bmatrix}
+            1 & 0 & 0 & 0\\
+            0 & 1 & 0 & 0\\
+            0 & 0 & 1 & 0
+        \end{bmatrix}
+        \begin{bmatrix}
+            x\\
+            y\\
+            z\\
+            1
+        \end{bmatrix}
+    \end{align*}
     Usando notación matricial;
     \begin{equation*}
-        \projectionMatrix=\intrinsicMatrix\begin{bmatrix} \vec{I} & \vec{0}\end{bmatrix}
+        \underset{3 \times 4}{\projectionMatrix}=\underset{3 \times 3}{\intrinsicMatrix}\underset{3 \times 4}{\begin{bmatrix} \underset{3 \times 3}{\vec{I}} & \underset{3 \times 1}{\vec{0}}\end{bmatrix}}
     \end{equation*}
     donde $\intrinsicMatrix$ es la matriz de calibración de la cámara y está definida como,
     
@@ -510,7 +529,7 @@
         \begin{bmatrix}f & 0 & \principalPoint_{u}\\
             0 & f & \principalPoint_{v}\\
             0 & 0 & 1
-        \end{bmatrix},
+        \end{bmatrix}
     \end{equation*}
 \end{frame}
 
