--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -130,9 +130,7 @@ resulta demasiado agresivo)
 
 \ejercicio  Calcular las velocidades lineales y angulares de las ruedas (izquierda y derecha) del robot para el camino circular del punto anterior.
 
-\ejercicio Generar un registro (log) de odometría y velocidad del robot, para lo cual hay que ejecutar nuevamente la simulación y utilizar el script \lstinline[style=bash]{dump odom.py}. Este script muestra en pantalla 6 columnas con los siguientes datos: tiempo (timestamp), coordenadas x, y, orientación, velocidad lineal y angular.
-
-\ejercicio Obtener un registro de datos con el robot en movimiento mediante teleoperación por teclado. Para guardar los datos generados por el script hay que redireccionar la salida a un archivo como:
+\ejercicio Generar un registro (log) de odometría y velocidad del robot, para lo cual hay que ejecutar nuevamente la simulación y utilizar el script \lstinline[style=bash]{dump odom.py}. Este script muestra en pantalla 6 columnas con los siguientes datos: tiempo (timestamp), coordenadas x, y, orientación, velocidad lineal y angular. El registro de datos debe ser realizado con el robot en movimiento utilizando teleoperación por teclado. Para guardar los datos generados por el script hay que redireccionar la salida a un archivo como:
 
 \begin{lstlisting}[style=bash] 
 ./dump_odom.py > log.txt
