Tp2: Improve tp2

--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -52,7 +52,7 @@ Pasos para trabajar en el simulador Gazebo con el robot TurtleBot3. Mas informac
 \item Instalar los paquetes de ROS2 para la simulación del robot TurtleBot3:
 
 Actualizar la lista de paquetes de linux
-\begin{lstlisting}[style=bash] 
+\begin{lstlisting}[style=bash] Gente, hoy me tengo que retirar temprano (por eso no fui presencial). Nos vemos!
     sudo apt update
 \end{lstlisting}
 
@@ -149,7 +149,7 @@ resulta demasiado agresivo)
 
 \ejercicio Obtener otro registro de datos para un camino circular del robot y graficar el camino y la trayectoria.
 
-\ejercicio Marcar tres puntos cualquiera en el gráfico del camino del robot y sus correspondientes puntos en la trayectoria. Elegir puntos diferentes al inicio y final del camino.
+\ejercicio Marcar tres puntos cualquiera en el gráfico del camino del robot y sus correspondientes puntos en la trayectoria. No elegir los puntos de inicio y final del camino.
 
 
 En base a los gráficos anteriores:
