Tp2: Add trajectory image examples

--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -149,7 +149,13 @@ resulta demasiado agresivo)
 
 \ejercicio Obtener otro registro de datos para un camino circular del robot y graficar el camino y la trayectoria.
 
-\ejercicio Marcar tres puntos cualquiera en el gráfico del camino del robot y sus correspondientes puntos en la trayectoria. No elegir los puntos de inicio y final del camino.
+\ejercicio Marcar tres puntos cualquiera en el gráfico del camino del robot y sus correspondientes puntos en la trayectoria (Ver Figura~\ref{fig:trajectory_example}). No elegir los puntos de inicio y final del camino.
+
+\begin{figure}[!htbp]
+    \includegraphics[width=0.2\columnwidth]{./images/trajectory_example.pdf}
+    \caption{Ejemplo de camino y trayectoria.}
+    \label{fig:trajectory_example}
+\end{figure}
 
 
 En base a los gráficos anteriores:
@@ -172,7 +178,6 @@ En base a los gráficos anteriores:
 
 
 \begin{figure}[!htbp]
-    \centering
     \subfloat[]
     {
         \includegraphics[width=0.2\columnwidth]{./images/path_a.pdf}
