Tp2: Add trajectory image examples

--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -152,7 +152,8 @@ resulta demasiado agresivo)
 \ejercicio Marcar tres puntos cualquiera en el gráfico del camino del robot y sus correspondientes puntos en la trayectoria (Ver Figura~\ref{fig:trajectory_example}). No elegir los puntos de inicio y final del camino.
 
 \begin{figure}[!htbp]
-    \includegraphics[width=0.2\columnwidth]{./images/trajectory_example.pdf}
+    \centering
+    \includegraphics[width=0.7\textwidth]{./images/trajectory_example.pdf}
     \caption{Ejemplo de camino y trayectoria.}
     \label{fig:trajectory_example}
 \end{figure}
@@ -178,14 +179,15 @@ En base a los gráficos anteriores:
 
 
 \begin{figure}[!htbp]
+    \centering
     \subfloat[]
     {
-        \includegraphics[width=0.2\columnwidth]{./images/path_a.pdf}
+        \includegraphics[width=0.2\textwidth]{./images/path_a.pdf}
     }
     \hspace{3cm}
     \subfloat[]
     {
-        \includegraphics[width=0.2\columnwidth]{./images/path_b.pdf}
+        \includegraphics[width=0.2\textwidth]{./images/path_b.pdf}
     }
     \caption{Caminos cuadrados.}
     \label{fig:trajectories}
