--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -53,6 +53,7 @@
 \newcommand{\essentialMatrix}{\vec{E}}
 \newcommand{\fundamentalMatrix}{\vec{F}}
 \newcommand{\inverse}[1]{{#1}^{-1}}
+\newcommand{\epipole}{\vec{e}}
 
 
 
