Slide 6: minor changes

--- a/teoricas/teorica_06/src/ekf.tex
+++ b/teoricas/teorica_06/src/ekf.tex
@@ -132,7 +132,7 @@
 	\note{Kalman Filter requiere que los ruidos sean gaussianos y que el estado resulte de una combinación lineal.}
 	
 	\centering
-	\alert{¿qué pasa si este estas suposiciones no pasan?}
+	\alert{¿Qué pasa si este estas suposiciones no pasan?}
 	\note{Differencial drive y Ackerman motion models NO son modelos lineales}
 	\note{Los observation models de un láser  o de una cámara tampoco son lineales.}
 \end{frame}
